# ghcjs-game-example

./: .gitignore  LICENSE  README.md  ghcjs-game-example.cabal  package.json  stack.yaml  webpack.config.js
app/: Main.hs
app/calljs/: CallJS.hs  CallJs.hs
app/dom/: Dom.hs
app/first/: First.hs
app/timeout/: Timeout.hs
