name:                ghcjs-game-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/syocy/ghcjs-game-example#readme
license:             BSD3
license-file:        LICENSE
author:              syocy
maintainer:          osmium.k@gmail.com
copyright:           2017 syocy
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable first-exe
  hs-source-dirs:      app/first
  main-is:             First.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
  build-depends:       base
  default-language:    Haskell2010

executable calljs-exe
  hs-source-dirs:      app/calljs
  main-is:             CallJS.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
  build-depends:       base
                     , ghcjs-base
                     , jsaddle
                     , lens
  default-language:    Haskell2010

executable timeout-exe
  hs-source-dirs:      app/timeout
  main-is:             Timeout.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
  build-depends:       base
                     , ghcjs-base
  default-language:    Haskell2010

executable game-exe
  hs-source-dirs:      app/game
  main-is:             Game.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
  build-depends:       base
                     , ghcjs-game-example
                     , ghcjs-dom
                     , jsaddle
                     , ghcjs-base
                     , lens
                     , text
  default-language:    Haskell2010

test-suite ghcjs-game-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghcjs-game-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/syocy/ghcjs-game-example
